...
		.then(function(resp) {
			console.log(resp);
			self.addMessage(message, `${self.timestamp()} >`,
				{
					row: "styleMessageRow",
					messageBox: "styleMessageBoxOut",
					messageText: "styleOutgoingMessage",
					messageStatus: "styleMessageStatusOut",
				});
		})
		.catch(function(error) {
			console.log(`Server refused posting message <${message}> with response: ${error}`);
			self.addMessage(message, `${self.timestamp()} !`,
...
				<View><Text style={[styles.styleTitle, {flex: 0}]}>Conversation</Text></View>
				<Animated.View style={{flex: 1, paddingBottom: this.keyboardHeight}}>
					<View 
						style={[styles.styleContainer, {flex: 1}]} 
					>
						<FlatList
							testID="conversationList"
							ref={(c) => this._conversationView = c}
							data={this.state.data}
							style={styles.styleList}
							inverted={true}
							renderItem={({ item, index }) =>
								<View style={this.rowStyle(index)}>
...
